Added Example. Added Example Section. Fixed AST.